VclPtr::reset does not delete the widget, tdf#91269

Change-Id: I26f392dc32bc4eb6fa82a1446680725691126457